--- a/cubes2.AppDir/cubes2.desktop
+++ b/cubes2.AppDir/cubes2.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=Cube Shooter
 Exec=cubes2
-Icon=icon
+Icon=icon.png
 Type=Application
 Categories=Application;Game;ArcadeGame;
